# qgispluginreleaser

./: .nens.toml  CHANGES.rst  MANIFEST.in  README.rst  buildout.cfg  pyproject.toml  setup.cfg  setup.py
.github/workflows/: nens-meta.yml
doc/source/: code.rst  conf.py
qgispluginreleaser/: entry_point.py  extension.py  test.py
src/qgispluginreleaser/: test.py  test_entry_point.py  test_installation.py
